center html elements on page, pseudo code for js.

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 			<p>Hornets</p>
 			<p>Bullets</p>
 	</section>
-	<div>
+	<div id = "nextButton">
 		<button>Next</button>
 	</div>
-	<div>
+	<div id = "newGameButton">
 		<button>New Game</button>
 	</div>
 	<script src="http://code.jquery.com/jquery.min.js"></script>
