Defined question object and planned basic architecture

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 	</header>
 	<section class = "question">
 		<h2>What team plays in Charlotte?</h2>
-			<p>Pelicans</p>
-			<p>Bobcats</p>
-			<p>Hornets</p>
-			<p>Bullets</p>
+			<div class="allChoices">
+				<p class="choice">Pelicans</p>
+				<p class="choice">Bobcats</p>
+				<p class="choice">Hornets</p>
+				<p class="choice">Bullets</p>
+			</div>
 	</section>
 	<div id = "nextButton">
 		<button>Next</button>
